tests/error/failBool.sk
int main() {
    bool b = 12;
    return 0;
}